src/objects/Technician_Hour__c.object
<CustomObject>
    <fields>
        <fullName>Costing_Rate__c</fullName>
        <label>Costing Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Technician_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Technician_Hours1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Service_Order_Header__c</fullName>
        <label>Service Order Header</label>
        <referenceTo>Service_Order_Header__c</referenceTo>
        <relationshipLabel>Technician Hours</relationshipLabel>
        <relationshipName>Technician_Hours</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technician</label>
        <referenceTo>Technician__c</referenceTo>
        <relationshipLabel>Technician Hours</relationshipLabel>
        <relationshipName>Technician_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>IF( AND(Costing_Rate__c != null, Total_Hours__c != null), Costing_Rate__c * Total_Hours__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Technician Hour</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Service_Order_Header__c</columns>
        <columns>Employee__c</columns>
        <columns>Total_Hours__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TH-{000000}</displayFormat>
        <label>Technician Hours Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technician Hours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>